deploy: 1b2b133550816472883ac5c32b9d117be15d4495

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             name="description"
             content="Documentation for the Kittn API"
         >
-    <title>Vance AI API Reference</title>
+    <title>API Reference</title>
 
     <style media="screen">
       .highlight table td { padding: 5px; }
